# wildfire-env

./: README.md  evaluate.ipynb  evaluate_v0.ipynb  inspect_zip.py  pyproject.toml  render_firecast.py  train_greedy.ipynb  train_v0.ipynb  try_wildfire_env.py
.ipynb_checkpoints/: FinalProject(Firecast)-checkpoint.ipynb  README-checkpoint.md  evaluate-checkpoint.ipynb  evaluate_v0-checkpoint.ipynb  train-checkpoint.ipynb  train_greedy-checkpoint.ipynb  train_greedy_v0-checkpoint.ipynb  train_v0-checkpoint.ipynb
firecastrl-env/: __init__.py
firecastrl-env/envs/: __init__.py  config.py  wildfire_env.py
firecastrl-env/envs/environment/: cell.py  enums.py  helper.py  vector.py  wind.py  zone.py
firecastrl-env/envs/fire_engine/: fire_engine.py  utils.py  (+1 more)
firecastrl-env/wrappers/: __init__.py
firecastrl_env/: __init__.py
firecastrl_env/envs/: __init__.py  config.py  wildfire_env.py
project_proposal/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
project_report/: firecast.ipynb  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
v0(local machine)/: train_greedy_v0.ipynb
v1_coop_better_than_comp/: train.ipynb
v2_google_colab/: FinalProject(Firecast).ipynb
v3_advanced_curriculum/: finalproject(firecast).py
v3_advanced_curriculum/ppo_fire_squad_coop/: data
v3_advanced_curriculum/ppo_fire_squad_curriculum/: data
v3_advanced_curriculum/ppo_fire_squad_greedy/: data  system_info.txt
v4_Normalization_CNN_heat_seeker/: FinalProject(Firecast).ipynb  FireSquadV2-2.ipynb
v4_Normalization_CNN_heat_seeker/ppo_fire_squad_v4_heatseeker/: data
(+8 files in other folders)
