[build-system]
requires = ["hatchling>=1.23.0"]
build-backend = "hatchling.build"

[project]
name = "firecastrl-env"
version = "0.1.2"
description = "Physics informed Wildfire environment compatible with Gymnasium"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Shreyas Bellary Manjunath", email = "sbellary@buffalo.edu"},
  { name = "Shaurya Mathur", email = "smathur4@buffalo.edu"}
]
dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.23",
  "pillow>=9.0.0",
  "requests>=2.28.0",
  "pygame>=2.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["firecastrl_env"]

[tool.hatch.build]
include = [
  "+firecastrl_env/**/*.py",
  "+firecastrl_env/envs/training_environments/*.png"
]

[project.urls]
Homepage = "https://github.com/aisystems-lab/firecast-rl"
Repository = "https://github.com/aisystems-lab/firecast-rl"